# tokmd

./: .gitattributes  .gitignore  .jules_run_id  .tokeignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMMIT_EDITMSG  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  Justfile  LICENSE-APACHE  PR_BODY.md  PR_DRAIN.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  TODO.md  _amend_push.py  _check.py  _commit_result.txt  _do_commit.py  _fix.py  _fix_all_branches.py  _fix_branch.ps1  _fix_branch4.py  _fix_branches_v2.py  _full_fix.py  _full_fix2.py  _run_bdd2.py  _run_bdd_test.py  _run_tests2.py  _test_idempotent.txt  _test_path.txt  _typos.toml  action.yml  (+127 more)
crates/tokmd-analysis/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-analysis-api-surface/: Cargo.toml  README.md
crates/tokmd-analysis-api-surface/src/: lib.rs
crates/tokmd-analysis-api-surface/tests/: api_surface_depth_w55.rs  api_surface_depth_w61.rs  api_surface_detection.rs  api_surface_w75.rs  bdd.rs  deep.rs  deep_apisurface_w49.rs  deep_coverage.rs  deep_w39.rs  deep_w68.rs  properties.rs  properties_w60.rs  unit.rs
crates/tokmd-analysis-archetype/: Cargo.toml  README.md
crates/tokmd-analysis-archetype/src/: lib.rs
crates/tokmd-analysis-archetype/tests/: archetype_depth_w55.rs  archetype_depth_w57.rs  archetype_depth_w61.rs  archetype_inference.rs  archetype_w75.rs  bdd.rs  deep.rs  deep_w42.rs  deep_w68.rs  identity_security.rs  properties.rs  unit.rs
crates/tokmd-analysis-assets/: Cargo.toml  README.md
crates/tokmd-analysis-assets/src/: lib.rs
crates/tokmd-analysis-assets/tests/: asset_detection.rs  assets_deep_w76.rs  assets_depth_w57.rs  assets_depth_w61.rs  assets_enricher_w54.rs  bdd.rs  deep.rs  deep_coverage.rs  deep_w38.rs  deep_w66.rs  deep_w68.rs  properties.rs  snapshots.rs
crates/tokmd-analysis-complexity/: Cargo.toml  README.md
crates/tokmd-analysis-complexity/src/: lib.rs
crates/tokmd-analysis-complexity/tests/: bdd.rs  complexity_contract_w65.rs  complexity_depth_w56.rs  complexity_scenarios.rs  complexity_w74.rs  deep.rs  deep_complexity_round2_w51.rs  deep_complexity_w47.rs  deep_w39.rs  deep_w68.rs  edge_cases.rs  integration.rs  properties.rs  proptest_w40.rs
crates/tokmd-analysis-content/: Cargo.toml  README.md
crates/tokmd-analysis-content/src/: content.rs  lib.rs
crates/tokmd-analysis-content/tests/: bdd.rs  bdd_extended.rs  content_analysis_depth_w57.rs  content_deep_w76.rs  content_enricher_w54.rs  deep.rs  deep_w39.rs  deep_w66.rs  deep_w68.rs  import_edge_determinism.rs  import_integration.rs  mutants_w77.rs  properties.rs
crates/tokmd-analysis-derived/: Cargo.toml  README.md
crates/tokmd-analysis-derived/src/: lib.rs
crates/tokmd-analysis-derived/tests/: bdd.rs  deep.rs  deep_derived_round2_w51.rs  deep_derived_w47.rs  deep_w38.rs  deep_w68.rs  derived_contract_w65.rs  derived_deep_w75.rs  derived_depth_w56.rs  derived_depth_w62.proptest-regressions  derived_depth_w62.rs  edge_cases.rs  integration_subreports.rs  integration_tree.rs  properties.proptest-regressions  properties.rs  proptest_w40.rs
crates/tokmd-analysis-effort/: Cargo.toml  README.md
crates/tokmd-analysis-effort/src/: classify.rs  cocomo2.rs  cocomo81.rs  confidence.rs  delta.rs  drivers.rs  lib.rs  model.rs  monte_carlo.rs  request.rs  size_basis.rs
crates/tokmd-analysis-effort/tests/: effort_engine.rs  proptest_confidence.rs  proptest_models.rs
crates/tokmd-analysis-entropy/: Cargo.toml  README.md
crates/tokmd-analysis-entropy/src/: lib.rs
crates/tokmd-analysis-entropy/tests/: bdd.rs  deep.rs  deep2.rs  deep_entropy_w49.rs  deep_w38.rs  deep_w68.rs  determinism.rs  entropy_depth_w56.rs  entropy_depth_w61.rs  entropy_detection.rs  entropy_w75.rs  high_entropy_fixtures.rs  properties.rs  runtime_fixtures.rs  static_entropy_fixtures.rs  synthetic_private_key_fixtures.rs  unit.rs  uselesskey_runtime_fixtures.rs
crates/tokmd-analysis-explain/: Cargo.toml  README.md
crates/tokmd-analysis-explain/src/: lib.rs
crates/tokmd-analysis-explain/tests/: bdd.rs  deep_v3.rs  deep_w66.rs  deep_w69.rs  edge_cases.rs  explain_depth_w55.rs  explain_depth_w57.rs  explain_depth_w60.rs  explanation_generation.rs  (+3 more)
crates/tokmd-analysis-fingerprint/: Cargo.toml  README.md
crates/tokmd-analysis-format/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-analysis-format-md/: Cargo.toml  README.md
crates/tokmd-analysis-fun/: Cargo.toml  README.md
crates/tokmd-analysis-git/: Cargo.toml  README.md
crates/tokmd-analysis-grid/: Cargo.toml  README.md
crates/tokmd-analysis-html/: Cargo.toml  README.md
crates/tokmd-analysis-imports/: Cargo.toml  README.md
crates/tokmd-analysis-license/: Cargo.toml  README.md
crates/tokmd-analysis-maintainability/: Cargo.toml  README.md
crates/tokmd-analysis-near-dup/: Cargo.toml  README.md
crates/tokmd-analysis-topics/: Cargo.toml  README.md
crates/tokmd-analysis-types/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-analysis-util/: Cargo.toml  README.md
crates/tokmd-badge/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-cockpit/: Cargo.toml  README.md
crates/tokmd-config/: CLAUDE.md  Cargo.toml  README.md  test_doctest.patch
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/dict/: entropy.dict  json.dict  path.dict  policy.dict  toml.dict
fuzz/fuzz_targets/: fuzz_badge_svg.rs  fuzz_cli_parser.rs  fuzz_context_policy.rs  fuzz_entropy.rs  fuzz_exclude_pattern.rs  fuzz_export_tree.rs  fuzz_ffi_envelope.rs  fuzz_import_parser.rs  fuzz_in_memory_inputs.rs  fuzz_json_pointer.rs  fuzz_json_types.rs  fuzz_math_stats.rs  fuzz_module_key.rs  fuzz_normalize_path.rs  fuzz_policy_evaluate.rs  fuzz_policy_toml.rs  fuzz_redact.rs  fuzz_run_json.rs  fuzz_scan_args.rs  fuzz_toml_config.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
xtask/tests/: affected_w91.rs  deep_w43.rs  deep_w71.rs  deep_xtask_w52.rs  deep_xtask_w52.rs.orig  deep_xtask_w52.rs.patch  deep_xtask_w52.rs.rej  docs_schema_w72.rs  docs_w43.rs  proof_plan_w92.rs  proof_policy_w90.rs  proof_workflow_status_w98.rs  publish_w71.rs  xtask_contract_w65.rs  xtask_deep_w74.rs
(+4012 files in other folders)
