[workspace]
resolver = "2"
members = [
    "crates/tokmd-badge",
    "crates/tokmd",
    "crates/tokmd-analysis",
    "crates/tokmd-analysis-explain",
    "crates/tokmd-analysis-api-surface",
    "crates/tokmd-analysis-complexity",
    "crates/tokmd-analysis-entropy",
    "crates/tokmd-analysis-license",
    "crates/tokmd-analysis-halstead",
    "crates/tokmd-analysis-derived",
    "crates/tokmd-analysis-content",
    "crates/tokmd-analysis-git",
    "crates/tokmd-analysis-util",
    "crates/tokmd-analysis-assets",
    "crates/tokmd-analysis-near-dup",
    "crates/tokmd-analysis-format",
    "crates/tokmd-analysis-types",
    "crates/tokmd-config",
    "crates/tokmd-core",
    "crates/tokmd-content",
    "crates/tokmd-context-git",
    "crates/tokmd-envelope",
    "crates/tokmd-format",
    "crates/tokmd-fun",
    "crates/tokmd-analysis-fun",
    "crates/tokmd-analysis-grid",
    "crates/tokmd-analysis-archetype",
    "crates/tokmd-analysis-topics",
    "crates/tokmd-analysis-fingerprint",
    "crates/tokmd-gate",
    "crates/tokmd-git",
    "crates/tokmd-model",
    "crates/tokmd-node",
    "crates/tokmd-progress",
    "crates/tokmd-python",
    "crates/tokmd-redact",
    "crates/tokmd-scan",
    "crates/tokmd-sensor",
    "crates/tokmd-settings",
    "crates/tokmd-substrate",
    "crates/tokmd-tokeignore",
    "crates/tokmd-types",
    "crates/tokmd-cockpit",
    "crates/tokmd-walk",
    "fuzz",
    "xtask",
]
default-members = [
    "crates/tokmd-badge",
    "crates/tokmd",
    "crates/tokmd-analysis",
    "crates/tokmd-analysis-explain",
    "crates/tokmd-analysis-api-surface",
    "crates/tokmd-analysis-complexity",
    "crates/tokmd-analysis-entropy",
    "crates/tokmd-analysis-license",
    "crates/tokmd-analysis-halstead",
    "crates/tokmd-analysis-assets",
    "crates/tokmd-analysis-content",
    "crates/tokmd-analysis-near-dup",
    "crates/tokmd-analysis-format",
    "crates/tokmd-analysis-types",
    "crates/tokmd-config",
    "crates/tokmd-core",
    "crates/tokmd-content",
    "crates/tokmd-context-git",
    "crates/tokmd-envelope",
    "crates/tokmd-format",
    "crates/tokmd-fun",
    "crates/tokmd-analysis-fun",
    "crates/tokmd-analysis-grid",
    "crates/tokmd-analysis-archetype",
    "crates/tokmd-analysis-topics",
    "crates/tokmd-analysis-fingerprint",
    "crates/tokmd-gate",
    "crates/tokmd-git",
    "crates/tokmd-model",
    "crates/tokmd-progress",
    "crates/tokmd-redact",
    "crates/tokmd-scan",
    "crates/tokmd-sensor",
    "crates/tokmd-settings",
    "crates/tokmd-substrate",
    "crates/tokmd-tokeignore",
    "crates/tokmd-types",
    "crates/tokmd-cockpit",
    "crates/tokmd-walk",
    "crates/tokmd-analysis-git",
    "crates/tokmd-analysis-derived",
    "crates/tokmd-analysis-util",
]
# xtask is a workspace member but excluded from default-members

[workspace.package]
version = "1.7.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/EffortlessMetrics/tokmd"
repository = "https://github.com/EffortlessMetrics/tokmd"
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]

[workspace.metadata.crane]
name = "tokmd-workspace"

[workspace.dependencies]
# Internal crates - centralized for "bump once" version management
tokmd = { path = "crates/tokmd", version = "1.7.0" }
tokmd-badge = { path = "crates/tokmd-badge", version = "1.7.0" }
tokmd-analysis = { path = "crates/tokmd-analysis", version = "1.7.0" }
tokmd-analysis-explain = { path = "crates/tokmd-analysis-explain", version = "1.7.0" }
tokmd-analysis-format = { path = "crates/tokmd-analysis-format", version = "1.7.0" }
tokmd-analysis-types = { path = "crates/tokmd-analysis-types", version = "1.7.0" }
tokmd-analysis-api-surface = { path = "crates/tokmd-analysis-api-surface", version = "1.7.0" }
tokmd-analysis-complexity = { path = "crates/tokmd-analysis-complexity", version = "1.7.0" }
tokmd-analysis-entropy = { path = "crates/tokmd-analysis-entropy", version = "1.7.0" }
tokmd-analysis-license = { path = "crates/tokmd-analysis-license", version = "1.7.0" }
tokmd-analysis-halstead = { path = "crates/tokmd-analysis-halstead", version = "1.7.0" }
tokmd-analysis-assets = { path = "crates/tokmd-analysis-assets", version = "1.7.0" }
tokmd-analysis-near-dup = { path = "crates/tokmd-analysis-near-dup", version = "1.7.0" }
tokmd-analysis-content = { path = "crates/tokmd-analysis-content", version = "1.7.0" }
tokmd-config = { path = "crates/tokmd-config", version = "1.7.0" }
tokmd-content = { path = "crates/tokmd-content", version = "1.7.0" }
tokmd-context-git = { path = "crates/tokmd-context-git", version = "1.7.0" }
tokmd-envelope = { path = "crates/tokmd-envelope", version = "1.7.0" }
tokmd-core = { path = "crates/tokmd-core", version = "1.7.0" }
tokmd-format = { path = "crates/tokmd-format", version = "1.7.0" }
tokmd-fun = { path = "crates/tokmd-fun", version = "1.7.0" }
tokmd-analysis-derived = { path = "crates/tokmd-analysis-derived", version = "1.7.0" }
tokmd-analysis-git = { path = "crates/tokmd-analysis-git", version = "1.7.0" }
tokmd-analysis-util = { path = "crates/tokmd-analysis-util", version = "1.7.0" }
tokmd-analysis-fun = { path = "crates/tokmd-analysis-fun", version = "1.7.0" }
tokmd-analysis-grid = { path = "crates/tokmd-analysis-grid", version = "1.7.0" }
tokmd-analysis-archetype = { path = "crates/tokmd-analysis-archetype", version = "1.7.0" }
tokmd-analysis-topics = { path = "crates/tokmd-analysis-topics", version = "1.7.0" }
tokmd-analysis-fingerprint = { path = "crates/tokmd-analysis-fingerprint", version = "1.7.0" }
tokmd-git = { path = "crates/tokmd-git", version = "1.7.0" }
tokmd-model = { path = "crates/tokmd-model", version = "1.7.0" }
tokmd-progress = { path = "crates/tokmd-progress", version = "1.7.0" }
tokmd-redact = { path = "crates/tokmd-redact", version = "1.7.0" }
tokmd-scan = { path = "crates/tokmd-scan", version = "1.7.0" }
tokmd-sensor = { path = "crates/tokmd-sensor", version = "1.7.0" }
tokmd-substrate = { path = "crates/tokmd-substrate", version = "1.7.0" }
tokmd-settings = { path = "crates/tokmd-settings", version = "1.7.0" }
tokmd-tokeignore = { path = "crates/tokmd-tokeignore", version = "1.7.0" }
tokmd-types = { path = "crates/tokmd-types", version = "1.7.0" }
tokmd-walk = { path = "crates/tokmd-walk", version = "1.7.0" }
tokmd-gate = { path = "crates/tokmd-gate", version = "1.7.0" }
tokmd-cockpit = { path = "crates/tokmd-cockpit", version = "1.7.0" }

# External crates - centralized for consistent versioning
blake3 = "1.8.3"
thiserror = "2.0.18"
serde_json = "1.0.149"
insta = { version = "1.46.3", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
