[workspace]
resolver = "2"
members = [
    "crates/tokmd",
    "crates/tokmd-analysis",
    "crates/tokmd-analysis-imports",
    "crates/tokmd-analysis-explain",
    "crates/tokmd-analysis-html",
    "crates/tokmd-analysis-api-surface",
    "crates/tokmd-analysis-complexity",
    "crates/tokmd-analysis-entropy",
    "crates/tokmd-analysis-license",
    "crates/tokmd-analysis-halstead",
    "crates/tokmd-analysis-maintainability",
    "crates/tokmd-analysis-derived",
    "crates/tokmd-analysis-content",
    "crates/tokmd-analysis-git",
    "crates/tokmd-analysis-util",
    "crates/tokmd-analysis-near-dup",
    "crates/tokmd-analysis-format",
    "crates/tokmd-analysis-types",
    "crates/tokmd-analysis-effort",
    "crates/tokmd-core",
    "crates/tokmd-content",
    "crates/tokmd-envelope",
    "crates/tokmd-ffi-envelope",
    "crates/tokmd-format",
    "crates/tokmd-fun",
    "crates/tokmd-analysis-grid",
    "crates/tokmd-analysis-archetype",
    "crates/tokmd-analysis-topics",
    "crates/tokmd-analysis-fingerprint",
    "crates/tokmd-gate",
    "crates/tokmd-git",
    "crates/tokmd-model",
    "crates/tokmd-node",
    "crates/tokmd-python",
    "crates/tokmd-wasm",
    "crates/tokmd-scan",
    "crates/tokmd-sensor",
    "crates/tokmd-settings",
    "crates/tokmd-substrate",
    "crates/tokmd-test-support",
    "crates/tokmd-types",
    "crates/tokmd-cockpit",
    "crates/tokmd-walk",
    "crates/tokmd-io-port",
    "fuzz",
    "xtask",
]
default-members = [
    "crates/tokmd",
    "crates/tokmd-analysis",
    "crates/tokmd-analysis-types",
    "crates/tokmd-cockpit",
    "crates/tokmd-core",
    "crates/tokmd-envelope",
    "crates/tokmd-ffi-envelope",
    "crates/tokmd-format",
    "crates/tokmd-gate",
    "crates/tokmd-git",
    "crates/tokmd-io-port",
    "crates/tokmd-model",
    "crates/tokmd-scan",
    "crates/tokmd-sensor",
    "crates/tokmd-settings",
    "crates/tokmd-substrate",
    "crates/tokmd-types",
    "crates/tokmd-wasm",
]
# xtask is a workspace member but excluded from default-members

[workspace.package]
version = "1.9.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/EffortlessMetrics/tokmd"
repository = "https://github.com/EffortlessMetrics/tokmd"
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]

[workspace.metadata.crane]
name = "tokmd-workspace"

[workspace.dependencies]
# Internal crates - centralized for "bump once" version management
tokmd = { path = "crates/tokmd", version = "1.9.0" }
tokmd-analysis = { path = "crates/tokmd-analysis", version = "1.9.0" }
tokmd-analysis-imports = { path = "crates/tokmd-analysis-imports", version = "1.9.0" }
tokmd-analysis-explain = { path = "crates/tokmd-analysis-explain", version = "1.9.0" }
tokmd-analysis-html = { path = "crates/tokmd-analysis-html", version = "1.9.0" }
tokmd-analysis-format = { path = "crates/tokmd-analysis-format", version = "1.9.0" }
tokmd-analysis-types = { path = "crates/tokmd-analysis-types", version = "1.9.0" }
tokmd-analysis-api-surface = { path = "crates/tokmd-analysis-api-surface", version = "1.9.0" }
tokmd-analysis-complexity = { path = "crates/tokmd-analysis-complexity", version = "1.9.0" }
tokmd-analysis-entropy = { path = "crates/tokmd-analysis-entropy", version = "1.9.0" }
tokmd-analysis-license = { path = "crates/tokmd-analysis-license", version = "1.9.0" }
tokmd-analysis-halstead = { path = "crates/tokmd-analysis-halstead", version = "1.9.0" }
tokmd-analysis-maintainability = { path = "crates/tokmd-analysis-maintainability", version = "1.9.0" }
tokmd-analysis-near-dup = { path = "crates/tokmd-analysis-near-dup", version = "1.9.0" }
tokmd-analysis-content = { path = "crates/tokmd-analysis-content", version = "1.9.0" }
tokmd-content = { path = "crates/tokmd-content", version = "1.9.0" }
tokmd-envelope = { path = "crates/tokmd-envelope", version = "1.9.0" }
tokmd-ffi-envelope = { path = "crates/tokmd-ffi-envelope", version = "1.9.0" }
tokmd-core = { path = "crates/tokmd-core", version = "1.9.0" }
tokmd-format = { path = "crates/tokmd-format", version = "1.9.0" }
tokmd-fun = { path = "crates/tokmd-fun", version = "1.9.0" }
tokmd-analysis-derived = { path = "crates/tokmd-analysis-derived", version = "1.9.0" }
tokmd-analysis-git = { path = "crates/tokmd-analysis-git", version = "1.9.0" }
tokmd-analysis-util = { path = "crates/tokmd-analysis-util", version = "1.9.0" }
tokmd-analysis-grid = { path = "crates/tokmd-analysis-grid", version = "1.9.0" }
tokmd-analysis-archetype = { path = "crates/tokmd-analysis-archetype", version = "1.9.0" }
tokmd-analysis-topics = { path = "crates/tokmd-analysis-topics", version = "1.9.0" }
tokmd-analysis-fingerprint = { path = "crates/tokmd-analysis-fingerprint", version = "1.9.0" }
tokmd-analysis-effort = { path = "crates/tokmd-analysis-effort", version = "1.9.0" }
tokmd-git = { path = "crates/tokmd-git", version = "1.9.0" }
tokmd-model = { path = "crates/tokmd-model", version = "1.9.0" }
tokmd-wasm = { path = "crates/tokmd-wasm", version = "1.9.0" }
tokmd-scan = { path = "crates/tokmd-scan", version = "1.9.0" }
tokmd-sensor = { path = "crates/tokmd-sensor", version = "1.9.0" }
tokmd-substrate = { path = "crates/tokmd-substrate", version = "1.9.0" }
tokmd-settings = { path = "crates/tokmd-settings", version = "1.9.0" }
tokmd-test-support = { path = "crates/tokmd-test-support", version = "1.9.0" }
tokmd-types = { path = "crates/tokmd-types", version = "1.9.0" }
tokmd-walk = { path = "crates/tokmd-walk", version = "1.9.0" }
tokmd-io-port = { path = "crates/tokmd-io-port", version = "1.9.0" }
tokmd-gate = { path = "crates/tokmd-gate", version = "1.9.0" }
tokmd-cockpit = { path = "crates/tokmd-cockpit", version = "1.9.0" }

# External crates - centralized for consistent versioning
anyhow = "1.0.102"
blake3 = "1.8.3"
proptest = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
insta = { version = "1.47.0", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

# Temporary until upstream `home` grows a non-Unix/non-Windows fallback.
[patch.crates-io]
home = { path = "vendor/home-0.5.12" }
