[package]
name = "tokmd-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.10"

# Optional deps, pulled only by targets that need them
arbitrary = { version = "1.4", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }

# Microcrate dependencies (optional for scoping)
tokmd-model = { workspace = true, optional = true }
tokmd-config = { workspace = true, optional = true }
tokmd-gate = { workspace = true, optional = true }
tokmd-types = { workspace = true, optional = true }
tokmd-content = { workspace = true, optional = true }

[features]
default = []
# Feature sets for each target category
model = ["dep:tokmd-model"]
config = ["dep:tokmd-config", "dep:serde_json", "dep:toml"]
gate = ["dep:tokmd-gate", "dep:serde_json", "dep:arbitrary"]
types = ["dep:tokmd-types", "dep:serde_json"]
content = ["dep:tokmd-content"]

[[bin]]
name = "fuzz_module_key"
path = "fuzz_targets/fuzz_module_key.rs"
test = false
doc = false
required-features = ["model"]

[[bin]]
name = "fuzz_normalize_path"
path = "fuzz_targets/fuzz_normalize_path.rs"
test = false
doc = false
required-features = ["model"]

[[bin]]
name = "fuzz_toml_config"
path = "fuzz_targets/fuzz_toml_config.rs"
test = false
doc = false
required-features = ["config"]

[[bin]]
name = "fuzz_policy_toml"
path = "fuzz_targets/fuzz_policy_toml.rs"
test = false
doc = false
required-features = ["gate"]

[[bin]]
name = "fuzz_json_pointer"
path = "fuzz_targets/fuzz_json_pointer.rs"
test = false
doc = false
required-features = ["gate"]

[[bin]]
name = "fuzz_policy_evaluate"
path = "fuzz_targets/fuzz_policy_evaluate.rs"
test = false
doc = false
required-features = ["gate"]

[[bin]]
name = "fuzz_entropy"
path = "fuzz_targets/fuzz_entropy.rs"
test = false
doc = false
required-features = ["content"]

[[bin]]
name = "fuzz_json_types"
path = "fuzz_targets/fuzz_json_types.rs"
test = false
doc = false
required-features = ["types"]
