[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
indicatif = "0.18.3"
console = "0.16.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
cargo_metadata = "0.23.1"
petgraph = "0.8.3"
