[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.6.0", features = ["derive"] }
toml = "1.0.6"
cargo_metadata = "0.23.1"
petgraph = "0.8.3"
chrono = "0.4"
semver = "1"

[dev-dependencies]
serde_json = "1"
toml = "1.0.6"
