[package]
name = "tokmd-analysis-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Asset and dependency-report enrichment for tokmd analysis."
readme = "README.md"
keywords = ["analysis", "assets", "dependency", "inventory", "microcrate"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-analysis-assets"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokmd-analysis-types.workspace = true
tokmd-walk.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

