[package]
name = "tokmd-analysis-derived"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Derived analytics computation used by tokmd analysis."
readme = "README.md"
keywords = ["analysis", "metrics", "derived", "receipts", "microcrate"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-analysis-derived"

[dependencies]
blake3.workspace = true
tokmd-analysis-types.workspace = true
tokmd-analysis-util.workspace = true
tokmd-types.workspace = true
