[package]
name = "tokmd-analysis-effort"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Effort estimation scaffolding and outputs for tokmd analysis receipts."
readme = "README.md"
keywords = ["analysis", "estimation", "cocomo", "effort", "metrics"]
categories = ["development-tools", "science"]
documentation = "https://docs.rs/tokmd-analysis-effort"

[features]
default = []
git = ["dep:tokmd-git"]

[dependencies]
anyhow.workspace = true
tokmd-analysis-types.workspace = true
tokmd-types.workspace = true
tokmd-analysis-util.workspace = true
tokmd-git = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
