[package]
name = "tokmd-analysis-entropy"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Entropy profiling for tokmd analysis receipts."
readme = "README.md"
keywords = ["analysis", "entropy", "security", "reporting", "microcrate"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-analysis-entropy"

[dependencies]
anyhow.workspace = true
tokmd-analysis-types.workspace = true
tokmd-analysis-util.workspace = true
tokmd-content.workspace = true
tokmd-types.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokmd-test-support.workspace = true

