[package]
name = "tokmd-analysis-format"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Formatting and rendering for tokmd analysis receipts."

[features]
default = []
fun = ["dep:tokmd-fun"]

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.46", features = ["formatting", "macros"] }
tokmd-analysis-types.workspace = true
tokmd-config.workspace = true

# Optional fun output helpers
tokmd-fun = { workspace = true, optional = true }

[dev-dependencies]
insta = { version = "1.46.1", features = ["json"] }
midly = "0.5.3"
tokmd-analysis.workspace = true
tokmd-types.workspace = true
