[package]
name = "tokmd-analysis-format"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Formatting and rendering for tokmd analysis receipts."
readme = "README.md"
keywords = ["formatting", "markdown", "json", "visualization", "code-analysis"]
categories = ["development-tools", "encoding"]
documentation = "https://docs.rs/tokmd-analysis-format"
include = ["src/", "README.md", "Cargo.toml"]

[features]
default = []
fun = ["dep:tokmd-fun"]

[dependencies]
anyhow = "1.0.101"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["formatting", "macros"] }
tokmd-analysis-types.workspace = true
tokmd-config.workspace = true

# Optional fun output helpers
tokmd-fun = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
midly = "0.5.3"
tokmd-analysis.workspace = true
tokmd-types.workspace = true

